--- a/project 3 part 2 API calls.ipynb
+++ b/project 3 part 2 API calls.ipynb
@@ -81,7 +81,7 @@
        " 'original_language': 'en',\n",
        " 'original_title': 'The Matrix',\n",
        " 'overview': 'Set in the 22nd century, The Matrix tells the story of a computer hacker who joins a group of underground insurgents fighting the vast and powerful computers who now rule the earth.',\n",
-       " 'popularity': 76.625,\n",
+       " 'popularity': 63.721,\n",
        " 'poster_path': '/f89U3ADr1oiB1s9GkdPOEpXUk5H.jpg',\n",
        " 'production_companies': [{'id': 79,\n",
        "   'logo_path': '/tpFpsqbleCzEE2p5EgvUq6ozfCA.png',\n",
@@ -111,8 +111,8 @@
        " 'tagline': 'Welcome to the Real World.',\n",
        " 'title': 'The Matrix',\n",
        " 'video': False,\n",
-       " 'vote_average': 8.19,\n",
-       " 'vote_count': 22097}"
+       " 'vote_average': 8.192,\n",
+       " 'vote_count': 22161}"
       ]
      },
      "execution_count": 5,
@@ -307,7 +307,7 @@
        " 'original_language': 'en',\n",
        " 'original_title': 'The Avengers',\n",
        " 'overview': 'When an unexpected enemy emerges and threatens global safety and security, Nick Fury, director of the international peacekeeping agency known as S.H.I.E.L.D., finds himself in need of a team to pull the world back from the brink of disaster. Spanning the globe, a daring recruitment effort begins!',\n",
-       " 'popularity': 194.776,\n",
+       " 'popularity': 199.422,\n",
        " 'poster_path': '/RYMX2wcKCBAr24UyPD7xwmjaTn.jpg',\n",
        " 'production_companies': [{'id': 420,\n",
        "   'logo_path': '/hUzeosd33nzE5MCNsZxCGEKTXaQ.png',\n",
@@ -327,8 +327,8 @@
        " 'tagline': 'Some assembly required.',\n",
        " 'title': 'The Avengers',\n",
        " 'video': False,\n",
-       " 'vote_average': 7.7,\n",
-       " 'vote_count': 27519,\n",
+       " 'vote_average': 7.706,\n",
+       " 'vote_count': 27580,\n",
        " 'certification': 'PG-13'}"
       ]
      },
@@ -413,8 +413,8 @@
        "      <td>Some assembly required.</td>\n",
        "      <td>The Avengers</td>\n",
        "      <td>False</td>\n",
-       "      <td>7.700</td>\n",
-       "      <td>27519</td>\n",
+       "      <td>7.706</td>\n",
+       "      <td>27580</td>\n",
        "      <td>PG-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -437,8 +437,8 @@
        "      <td>Some assembly required.</td>\n",
        "      <td>The Avengers</td>\n",
        "      <td>False</td>\n",
-       "      <td>7.700</td>\n",
-       "      <td>27519</td>\n",
+       "      <td>7.706</td>\n",
+       "      <td>27580</td>\n",
        "      <td>PG-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -462,7 +462,7 @@
        "      <td>The Notebook</td>\n",
        "      <td>False</td>\n",
        "      <td>7.879</td>\n",
-       "      <td>9816</td>\n",
+       "      <td>9845</td>\n",
        "      <td>PG-13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -507,9 +507,9 @@
        "2  Behind every great love is a great story.  The Notebook  False   \n",
        "\n",
        "   vote_average vote_count certification  \n",
-       "0         7.700      27519         PG-13  \n",
-       "1         7.700      27519         PG-13  \n",
-       "2         7.879       9816         PG-13  \n",
+       "0         7.706      27580         PG-13  \n",
+       "1         7.706      27580         PG-13  \n",
+       "2         7.879       9845         PG-13  \n",
        "\n",
        "[3 rows x 26 columns]"
       ]
@@ -585,7 +585,42 @@
     {
      "data": {
       "text/plain": [
-       "['title.akas.tsv.gz', 'title_basics.csv.gz', 'title.ratings.tsv.gz']"
+       "['final_tmdb_data_2006.csv.gz',\n",
+       " 'tmdb_api_results_2010.json',\n",
+       " 'final_tmdb_data_2014.csv.gz',\n",
+       " 'tmdb_api_results_2006.json',\n",
+       " 'final_merged_data.csv.gz',\n",
+       " 'title.akas.tsv.gz',\n",
+       " 'final_tmdb_data_2008.csv.gz',\n",
+       " 'final_tmdb_data_2004.csv.gz',\n",
+       " 'tmdb_api_results_2007.json',\n",
+       " 'tmdb_api_results_2011.json',\n",
+       " 'tmdb_api_results_2000.json',\n",
+       " 'final_tmdb_data_2000.csv.gz',\n",
+       " 'final_tmdb_data_2012.csv.gz',\n",
+       " 'tmdb_api_results_2001.json',\n",
+       " 'final_tmdb_data_2010.csv.gz',\n",
+       " 'final_tmdb_data_2002.csv.gz',\n",
+       " 'title_basics.csv.gz',\n",
+       " 'title.ratings.tsv.gz',\n",
+       " 'tmdb_api_results_2002.json',\n",
+       " 'final_tmdb_data_2007.csv.gz',\n",
+       " 'tmdb_api_results_2014.json',\n",
+       " 'final_tmdb_data_2015.csv.gz',\n",
+       " 'tmdb_api_results_2015.json',\n",
+       " 'tmdb_api_results_2003.json',\n",
+       " 'final_tmdb_data_2009.csv.gz',\n",
+       " 'final_tmdb_data_2005.csv.gz',\n",
+       " 'final_tmdb_data_2001.csv.gz',\n",
+       " 'final_tmdb_data_2013.csv.gz',\n",
+       " 'tmdb_api_results_2004.json',\n",
+       " 'tmdb_api_results_2012.json',\n",
+       " 'tmdb_api_results_2008.json',\n",
+       " 'tmdb_api_results_2009.json',\n",
+       " 'tmdb_api_results_2013.json',\n",
+       " 'final_tmdb_data_2011.csv.gz',\n",
+       " 'final_tmdb_data_2003.csv.gz',\n",
+       " 'tmdb_api_results_2005.json']"
       ]
      },
      "execution_count": 16,
@@ -864,7 +899,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "YEARS_TO_GET = [2000,2001]"
+    "YEARS_TO_GET = [2018,2020]"
    ]
   },
   {
@@ -879,14 +914,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "8c219b5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a5f297fe70c4c77b4f5a61b5d18ae34",
+       "model_id": "1b81264824c34d71a432578fa0d6a907",
        "version_major": 2,
        "version_minor": 0
       },
@@ -900,26 +935,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29b1e7a6104146b281f84fc5f57db1ad",
+       "model_id": "426e8c5fa2694ecda32aff1b185451ba",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Movies from 2000:   0%|          | 0/1412 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e831f018f22547aca2a87aad54570116",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Movies from 2001:   0%|          | 0/1530 [00:00<?, ?it/s]"
+       "Movies from 2018:   0%|          | 0/5636 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -980,18 +1001,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "03300194",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- Total errors: 446\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"- Total errors: {len(errors)}\")"
    ]
